--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title></title>
         <link rel="stylesheet" href="css\style.css">
     </head>
     <body>
-        </html>
-
-
+        <header class="navigaion">
+            <div class="inline-block logo">
+                <img src="images\logo.png">
+                <nav class="inline-block nav">
+                    <ul>
+                        <li class="inline-block">About Me</li>
+                        <li class="inline-block">Resume</li>
+                        <li class="inline-block">Case Studies</li>
+                        <li class="inline-block">Design</li>
+                        <li class="inline-block">Contact Me</li>
+                        <li class="inline-block">801-520-3179</li>
+                    </ul>
+                </nav>
+                <img class="inline-block img" src="images\linkden.png">
+            </div>
+        </header>
 <section class="aboutMe">
 <!--  My About Me section coded using CSS flex -->
     <div class="flexContainer">
@@ -93,3 +107,5 @@
 
 </section>
     </body>
+    
+    </html>
